crates/roughly/tests/snapshots/test_format__if_statement__auto_braces.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
if (condition) {
  body
}

if (condition) {
  body
} else {
  alternative
}

# TODO: tree-sitter-r cannot parse the code generated by this
# assert_fmt! {r#"
#     if (condition) {
#         body
#     } else # else
#         body
# "#};
