crates/roughly/tests/snapshots/test_format__if_statement__auto_braces_not_transitive.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
# fmt_multiline is not transitive (it doesn't break single line if-else)
function() {
  if (x) y else z
}
