crates/roughly/tests/snapshots/test_format__if_statement__empty.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
if (condition) {}

if (condition) {} else {}
