crates/roughly/tests/snapshots/test_format__if_statement__hugging_with_comments.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
if ( # comment
  condition
) {}

if (
  condition # comment
) {}

if (
  # 1
  {
    condition
  }
) {}

if (
  {
    condition
  }
  # 1
) {}
