crates/roughly/tests/snapshots/test_format__if_statement__nested.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
if (a) { x } else if (b) { y } else if (c) { z }

if (a) {
  x
} else if (b) {
  y
} else if (c) {
  z
}
