crates/roughly/tests/snapshots/test_format__if_statement__spacing.snap
---
source: crates/roughly/tests/test_format.rs
expression: code
---
if (condition) { body } else { body }

if (condition) {
  body
} else {
  body
}
